[package]
name = "demogorgon"
description = "It's a proxy and it will eat you."
homepage = "https://github.com/trickeydan/demogorgon"
repository = "https://github.com/trickeydan/demogorgon"
version = "0.1.0"
authors = ["Dan Trickey <dan@trickey.io>"]
license = "AGPL-3.0-only"
keywords = ["reverse-proxy", "hyper", "http", "jwt"]
categories = ["authentication", "web-programming::http-server"]
edition = "2018"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
hyper = { version = "0.14", features = ["http1", "client", "server"]}
hyper-rustls = "0.22"
jsonwebtoken = "7.2"
lazy_static = "1.4"
log = "0.4"
rustls = "0.19"
rustls-native-certs = "0.5"
rustls-pemfile = "0.2.0"  # PEM parsing is due to be removed from rustls
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.2", features = ["full"]}
toml = "0.5"
unicase = "2.6"
uuid = { version = "0.8", features = ["serde"] }
